[tool.poetry]
name = "datamask"
version = "1.0.3"
description = "Data PII cleaning/masking for databases"
authors = ["Fredrik Håård <fredrik@metallapan.se>"]
license = "MIT License"
readme = "README.md"
homepage = "https://github.com/haard/datamask"

[tool.poetry.dependencies]
python = ">=3.7,<4"
psycopg2-binary = ">2.8.0,<2.10"
Faker = ">8.12.0<9.0.0"
python-slugify = ">4.0.0,<6.0.0"

[tool.poetry.dev-dependencies]
tox = "^3.24.3"
tox-poetry = "^0.4.1"
pytest = "^6.2.5"
shed = "^0.3.10"
keyring = "^23.2.1"
sagecipher = "^0.7.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
datamask = 'datamask.cleaner:main'
datadict = 'datamask.datadict:main'
